--- a/app/create/create.modules.css
+++ b/app/create/create.modules.css
@@ -1,19 +1,12 @@
-input {
-  background: black;
-  border: 1px solid grey;
-  border-radius: 6px;
-  color: white;
-  padding: 10px;
-}
-
 form {
-  border: 2px solid white;
   display: flex;
   gap: 2rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+input,
+select {
   width: 100%;
-  height: 100vh;
-  background-color: #eecdd7;
 }
