--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,8 @@
   /* border: 2px dotted red; */
 }
 
-input {
+input,
+select {
   padding: 10px 20px;
   border-radius: 6px;
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
